--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
     <div id="elmish-app"></div>
     <script src="./js/vendors.js"></script>
     <script src="./js/app.js"></script>
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script>
+        $( document ).ready(function() {
+            $('.scrolling-wrapper').animate({scrollLeft: $('.current-time').width() - 600}, 500);
+        });
+    </script>
 </body>
 </html>
