even more changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             crossorigin="anonymous"></script>
     <script>
         $( document ).ready(function() {
-            $('.scrolling-wrapper').animate({scrollLeft: $('.current-time').width() - 600}, 500);
+            $('.planning').animate({scrollLeft: $('.current-time').width() - 600}, 500);
         });
     </script>
 </body>
